...
        android:layout_height="wrap_content"
        android:text="@string/city_not_set"
        android:id="@+id/locationTextView"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/set_new_location"
        android:id="@+id/newLocationButton"
        android:textSize="12sp"/>
    <TextView
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/migraineStartDateTextView"
            android:text="@string/dd_mm_yyyy"
            android:textColor="@color/textColor"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/migraineStartTimeTextView"
            android:text="@string/hh_mm"
            android:textColor="@color/textColor"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/set_button"
            android:clickable="true"
            android:src="@android:drawable/ic_input_add"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:visibility="gone"
        android:clickable="true"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:visibility="gone"
        android:clickable="true"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/painTextView"
        android:text="@string/pain_at_beginning_of_migraine"
        android:clickable="false"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/painLevelTextView"
        android:textColor="@color/textColor"
        android:clickable="true"
...
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:id="@+id/painSeekBar"
        android:progress="0"
        android:max="10"
        android:background="#494949"
        android:layout_marginLeft="12dp"
...
        android:layout_height="wrap_content"
        android:text="@string/are_you_experiencing_aura"
        android:id="@+id/auraCheckBox"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/have_you_eaten_in_the_last_3_hours"
        android:id="@+id/eatenCheckBox"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/hours_of_quality_sleep"
        android:id="@+id/sleepTextView"
        android:textColor="#ffffff"
        android:textSize="24sp"/>
...
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/sleepLevelTextView"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:id="@+id/sleepSeekBar"
        android:progress="0"
        android:max="24"
...
        android:layout_height="wrap_content"
        android:text="@string/stress_levels"
        android:id="@+id/stressTextView"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/stressLevelTextView"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:id="@+id/stressSeekBar"
        android:progress="0"
        android:max="10"
...
        android:layout_height="wrap_content"
        android:text="@string/amount_of_eye_strain"
        android:id="@+id/eyesTextView"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/eyesLevelTextView"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:id="@+id/eyesSeekBar"
        android:progress="0"
        android:max="10"
...
        android:layout_height="wrap_content"
        android:text="@string/type_of_pain"
        android:id="@+id/typeOfPainTextView"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/typeOfPainSpinner"/>

    <TextView
...
        android:layout_height="wrap_content"
        android:text="@string/source_of_pain"
        android:id="@+id/areaOfPainTextView"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/areasOfPainSpinner"/>

    <TextView
...
        android:layout_height="wrap_content"
        android:text="@string/medication"
        android:id="@+id/typeOfMedsTextView"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/typeOfMedsSpinner"/>


...
        android:layout_height="wrap_content"
        android:text="@string/symptoms"
        android:id="@+id/symptomsTextView"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/nauseous"
        android:id="@+id/nauseaCheckBox"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/sensitivity_to_light"
        android:id="@+id/sensitivityLightCheckBox"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/sensitivity_noise"
        android:id="@+id/sensitivityNoiseCheckBox"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/sensitivity_to_smell"
        android:id="@+id/sensitivitySmellCheckBox"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/nasal_congestion"
        android:id="@+id/nasalCongestionCheckBox"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/ringing_or_popped_ears"
        android:id="@+id/earsCheckBox"
        android:textColor="#ffffff"
        android:clickable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/confusion"
        android:id="@+id/confusionCheckBox"
        android:textColor="#ffffff"
        android:clickable="true"
...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/menstrualDataLayout">

            <TextView
...
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:id="@+id/cycleDayTextView"
                android:textColor="@color/textColor"
                android:clickable="true"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/saveRecordButton"
            android:text="@string/save_record"
            android:clickable="true"/>
...
