...
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="hh_mm">HH:mm</string>
    <string name="save_record">Save Record</string>
    <string name="dateTimeError">Please set date and time</string>
    <string name="error_city_not_set">Please set current city</string>
    <string name="keep_track_of_menstruation_by_pressing_on_the_day">Keep track of menstruation by hard pressing on the day</string>
    <string name="red_drop">red drop</string>
    <string name="day_in_cycle">Day in cycle:</string>
    <string name="confirm">Save data</string>
    <string name="migraine_started">Migraine\nstarted:</string>
    <string name="track_hormones">Track Hormones</string>
...
